Stopped placeholders from flickering, adjusted project tile shadow

--- a/app/assets/stylesheets/partials/dashboard/_core.sass
+++ b/app/assets/stylesheets/partials/dashboard/_core.sass
@@ -95,16 +95,17 @@ bikboo-shell.tree-dashboard
 
             .project
                 background: #ffffff
+                box-shadow: 0px 0px 6px -3px black
 
                 margin-bottom: 2rem
-
-                border-radius: 3px
-                border: solid 1px #d0d0d0
-
-                box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3)
                 min-height: 120px
 
                 display: flex
+
+                border: solid 1px #dedddd
+                border-radius: 3px
+
+                overflow: hidden
 
                 .details
                     flex: auto
@@ -212,15 +213,7 @@ bikboo-shell.tree-dashboard
                             background: #eeeeee
 
             .project.placeholder
-                background: #ffffff
-                overflow: hidden
-
-                margin-bottom: 2rem
-
-                border-radius: 3px
-
-                box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3)
-                min-height: 120px
+                display: block
 
                 .line
                     max-width: 90%
